fix: change the button margin to prevent content shift on enable/disable

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -139,7 +139,7 @@ button:disabled {
 }
 
 .button-next {
-  margin-bottom: 24px;
+  margin-bottom: 27px;
   padding: 12px 65px;
   font-family: 'Merriweather', serif;
   font-size: 14px;
